--- a/templates/base.html
+++ b/templates/base.html
@@ -12,18 +12,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/queries.css' %}">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicons/justdo-website-favicon-white.png' %}" />
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicons/justdo-website-favicon-white.png' %}" />
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicons/favicon-16x16.png' %}" />
     <link rel="manifest" href="{% static 'images/favicons/site.webmanifest' %}" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>{% block title %}{% endblock %} | JustDO</title>
-    <!-- <style>
-      body {
-        font-family: 'Poppins', sans-serif;
-      }
-
-    </style> -->
-    {% block head %} {% endblock %}
   </head>
 
   <body>
