--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -16,41 +16,44 @@
           <div class="card-body">
             <h5 class="text-primary fs-7 fw-bold text-center">Here are your tasks</h5>
             {% if tasks %}
-            <table class="table align-middle mb-0 bg-light">
-              <thead class="bg-light">
-                <tr>
-                  <th></th>
-                  <th>Task</th>
-                  <th>Status</th>
-                  <th>Priority</th>
-                  <th>Due Date</th>
-                  <th>Days Remaining</th>
-                  <th>Actions</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for task in tasks %}
-                <tr>
-                  <td><input type="checkbox" value="{{ task.id }}" id="task_{{ task.id }}" {% if task.complete %}checked{% endif %}{% if task.complete %}disabled{% endif %}onchange="markTaskCompleted(this)"></td>
-                  <td>{{ task.title }}</td>
-                  <td>{% if task.status == "P" %}<span class="badge rounded-pill d-inline bg-primary">Not Started</span>{% elif task.status == "C" %}<span class="badge rounded-pill d-inline bg-success">Completed</span>{% else %}<span class="badge rounded-pill d-inline bg-warning">In Progress</span>{% endif %}</td>
-                  <td>{% if task.priority == "H" %}<span class="badge rounded-pill d-inline bg-danger">High</span>{% elif task.priority == "M" %}<span class="badge rounded-pill d-inline bg-warning">Medium</span>{% else %}<span class="badge rounded-pill d-inline bg-primary">Low</span>{% endif %}</td>
-                  <td>{{ task.due_date|date:"F d, Y" }}</td>
-                  <td>{{ task.days_until_due }}</td>
-                  <td>
-                    <div class="tasks-control">
-                      <button type="button" class="_btn _btn-primary btn-floating btn-lg" data-mdb-toggle="modal" data-mdb-target="#update-task-modal-{{ task.id }}">
-                        <i class="bi bi-pen-fill pe-none"></i>
-                      </button>
-                      <button class="_btn" type="button" data-mdb-toggle="modal" data-mdb-target="#delete-task-modal-{{ task.id }}"><i class="bi bi-trash-fill pe-none"></i></button>
-                    </div>
-                  </td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
+            <div class="table-responsive">
+              <table class="table align-middle mb-0 bg-light">
+                <thead class="bg-light">
+                  <tr>
+                    <th></th>
+                    <th>Task</th>
+                    <th>Status</th>
+                    <th>Priority</th>
+                    <th>Due Date</th>
+                    <th>Days Remaining</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for task in tasks %}
+                  <tr>
+                    <td><input type="checkbox" value="{{ task.id }}" id="task_{{ task.id }}" {% if task.complete %}checked{% endif %}{% if task.complete %}disabled{% endif %}onchange="markTaskCompleted(this)"></td>
+                    <td>{{ task.title }}</td>
+                    <td>{% if task.status == "P" %}<span class="badge rounded-pill d-inline bg-primary">Not Started</span>{% elif task.status == "C" %}<span class="badge rounded-pill d-inline bg-success">Completed</span>{% else %}<span class="badge rounded-pill d-inline bg-warning">In Progress</span>{% endif %}</td>
+                    <td>{% if task.priority == "H" %}<span class="badge rounded-pill d-inline bg-danger">High</span>{% elif task.priority == "M" %}<span class="badge rounded-pill d-inline bg-warning">Medium</span>{% else %}<span class="badge rounded-pill d-inline bg-primary">Low</span>{% endif %}</td>
+                    <td>{{ task.due_date|date:"F d, Y" }}</td>
+                    <td>{{ task.days_until_due }}</td>
+                    <td>
+                      <div class="tasks-control">
+                        <button type="button" class="_btn _btn-primary btn-floating btn-lg" data-mdb-toggle="modal" data-mdb-target="#update-task-modal-{{ task.id }}">
+                          <i class="bi bi-pen-fill pe-none"></i>
+                        </button>
+                        <button class="_btn" type="button" data-mdb-toggle="modal" data-mdb-target="#delete-task-modal-{{ task.id }}"><i class="bi bi-trash-fill pe-none"></i></button>
+                      </div>
+                    </td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+            </div>
+
             {% else %}
-            <p class="text-center">You have no tasks yet <a href="{% url 'create-task' %}" class="text-primary">create</a> one or view your dashboard</p>
+            <p class="text-center">You have no tasks yet <a href="#create-task" class="text-decoration-none text-primary">create</a> one or view your <a href="{% url 'dashboard' %}" class="text-primary">dashboard</a></p>
             {% endif %}
           </div>
         </div>
@@ -59,7 +62,7 @@
     </div>
     <!-- Create Task Form -->
     <div class="col-md-4">
-      <section>
+      <section id="create-task">
         <div class="card">
           <div class="card-body">
             <h4 class="text-primary card-title text-center">Create a task</h4>
