--- a/templates/base_nav.html
+++ b/templates/base_nav.html
@@ -1,44 +1,50 @@
 {% load static %}
 {% if request.path == "/" %}
-<nav class="navbar navbar-expand-lg container d-flex justify-content-center align-items-center mb-auto bg-primary w-50">
-  <div>
-    <a href="{% url 'home_page' %}">
+<header class="navbar navbar-expand-lg sticky-top">
+  <nav class="container">
+    <a class="navbar-brand" href="{% url 'home_page' %}">
       <img src="{% static 'images/logos/png/justdo-high-resolution-logo-white-on-transparent-background.png' %}" alt="logo-white" style="width: 100px; height: auto" />
     </a>
-  </div>
-  <div class="ms-auto">
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a href="{% url 'home_page' %}" id="index-login-btn" class="nav-link px-2" style="color: #ffffff">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="{% url 'features' %}" class="nav-link px-2" style="color: #ffffff">Features</a>
-      </li>
-      <li class="nav-item">
-        <a href="{% url 'login' %}" id="index-register-btn" class="nav-link px-2" style="color: #ffffff">Login</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <button class="custom-toggler navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#NavMenuLinks">
+      <span class="custom-icon navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="NavMenuLinks">
+      <ul class="nav navbar-nav ms-auto mb-2 mb-lg-0 nav-pills">
+        <li class="nav-item">
+          <a href="{% url 'home_page' %}" id="index-login-btn" class="nav-link px-2" style="color: #ffffff">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'features' %}" class="nav-link px-2" style="color: #ffffff">Features</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'login' %}" id="index-register-btn" class="nav-link px-2" style="color: #ffffff">Login</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
 {% else %}
-<nav class="navbar navbar-expand-lg container d-flex justify-content-center align-items-center mb-auto">
-  <div>
-    <a href="{% url 'home_page' %}">
+<header class="navbar navbar-expand-lg sticky-top">
+  <nav class="container">
+    <a class="navbar-brand" href="{% url 'home_page' %}">
       <img src="{% static 'images/logos/png/logo-no-background.png' %}" alt="logo-white" style="width: 100px; height: auto" />
     </a>
-  </div>
-  <div class="ms-auto">
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a href="{% url 'home_page' %}" id="index-login-btn" class="nav-link px-2" style="color: #0088ff">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="{% url 'features' %}" class="nav-link px-2" style="color: #0088ff">Features</a>
-      </li>
-      <li class="nav-item">
-        <a href="{% url 'login' %}" id="index-register-btn" class="nav-link px-2" style="color: #0088ff">Login</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <button class="custom-toggler navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#NavMenuLinks">
+      <span class="custom-icon navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="NavMenuLinks">
+      <ul class="nav navbar-nav ms-auto mb-2 mb-lg-0 nav-pills">
+        <li class="nav-item">
+          <a href="{% url 'home_page' %}" id="index-login-btn" class="nav-link px-2" style="color: #0088ff">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'features' %}" class="nav-link px-2" style="color: #0088ff">Features</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'login' %}" id="index-register-btn" class="nav-link px-2" style="color: #0088ff">Login</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
 {% endif %}
